add scroll hide navigation bar

--- a/WildLifeApp/Base.lproj/Main.storyboard
+++ b/WildLifeApp/Base.lproj/Main.storyboard
@@ -625,10 +625,10 @@
             </objects>
             <point key="canvasLocation" x="4578" y="1482"/>
         </scene>
-        <!--Table View Controller-->
+        <!--Edit Sport Table View Controller-->
         <scene sceneID="Bbs-Z2-KgZ">
             <objects>
-                <tableViewController id="wvv-xc-goU" sceneMemberID="viewController">
+                <tableViewController id="wvv-xc-goU" customClass="EditSportTableViewController" customModule="WildLifeApp" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="lVn-bO-ba6">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
