--- a/WildLifeApp/Base.lproj/Main.storyboard
+++ b/WildLifeApp/Base.lproj/Main.storyboard
@@ -284,43 +284,65 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M3T-Vg-zYp">
-                                <rect key="frame" x="42" y="40" width="66" height="30"/>
-                                <state key="normal" title="LOG OUT">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="logOut:" destination="oa7-Al-IJR" eventType="touchUpInside" id="Uge-Ng-NBH"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Au-VN-sdi">
-                                <rect key="frame" x="42" y="95" width="83" height="30"/>
-                                <state key="normal" title="Alert Button">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="alertButton:" destination="oa7-Al-IJR" eventType="touchUpInside" id="Re1-UC-mwP"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="II8-Br-MLb">
-                                <rect key="frame" x="42" y="151" width="42" height="21"/>
+                                <rect key="frame" x="20" y="20" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aBJ-W8-ceD">
+                                <rect key="frame" x="0.0" y="49" width="600" height="502"/>
+                                <color key="backgroundColor" red="0.25490196079999999" green="0.36470588240000001" blue="0.68235294120000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="G2V-ds-17o">
+                                    <size key="itemSize" width="255" height="160"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="EWs-qH-250" customClass="HomeViewCollectionViewCell" customModule="WildLifeApp" customModuleProvider="target">
+                                        <rect key="frame" x="10" y="10" width="255" height="160"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="255" height="160"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8nk-7G-zSX">
+                                                    <rect key="frame" x="0.0" y="0.0" width="255" height="160"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="8nk-7G-zSX" firstAttribute="top" secondItem="EWs-qH-250" secondAttribute="top" id="Lal-uO-CHj"/>
+                                            <constraint firstAttribute="bottom" secondItem="8nk-7G-zSX" secondAttribute="bottom" id="ToG-O0-AU8"/>
+                                            <constraint firstAttribute="trailing" secondItem="8nk-7G-zSX" secondAttribute="trailing" id="xDs-9c-hL8"/>
+                                            <constraint firstItem="8nk-7G-zSX" firstAttribute="leading" secondItem="EWs-qH-250" secondAttribute="leading" id="xJt-jq-xVu"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="cellImage" destination="8nk-7G-zSX" id="ukB-VK-uoU"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="oa7-Al-IJR" id="Xmd-TR-zv3"/>
+                                    <outlet property="delegate" destination="oa7-Al-IJR" id="DCy-tY-1va"/>
+                                </connections>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="0.25490196079999999" green="0.36470588240000001" blue="0.68235294120000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="M3T-Vg-zYp" firstAttribute="leading" secondItem="86M-54-7MV" secondAttribute="leadingMargin" constant="22" id="7gm-5t-c6p"/>
-                            <constraint firstItem="II8-Br-MLb" firstAttribute="leading" secondItem="86M-54-7MV" secondAttribute="leadingMargin" constant="22" id="Ccr-ZY-roW"/>
-                            <constraint firstItem="3Au-VN-sdi" firstAttribute="top" secondItem="M3T-Vg-zYp" secondAttribute="bottom" constant="25" id="ZMN-45-KhS"/>
-                            <constraint firstItem="II8-Br-MLb" firstAttribute="top" secondItem="3Au-VN-sdi" secondAttribute="bottom" constant="26" id="bOj-Y6-DJp"/>
-                            <constraint firstItem="M3T-Vg-zYp" firstAttribute="top" secondItem="PiY-Db-1WN" secondAttribute="bottom" constant="20" id="o9I-Kv-IOP"/>
-                            <constraint firstItem="3Au-VN-sdi" firstAttribute="leading" secondItem="86M-54-7MV" secondAttribute="leadingMargin" constant="22" id="rYe-yo-egK"/>
+                            <constraint firstItem="TDR-kv-YL4" firstAttribute="top" secondItem="aBJ-W8-ceD" secondAttribute="bottom" id="1iT-nW-Ie1"/>
+                            <constraint firstItem="II8-Br-MLb" firstAttribute="top" secondItem="PiY-Db-1WN" secondAttribute="bottom" id="4dZ-z8-8FC"/>
+                            <constraint firstItem="aBJ-W8-ceD" firstAttribute="leading" secondItem="86M-54-7MV" secondAttribute="leadingMargin" constant="-20" id="lQm-Qq-IbP"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aBJ-W8-ceD" secondAttribute="trailing" constant="-20" id="srf-MA-lu1"/>
+                            <constraint firstItem="aBJ-W8-ceD" firstAttribute="top" secondItem="II8-Br-MLb" secondAttribute="bottom" constant="8" id="uTp-EZ-ZxG"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="II8-Br-MLb" secondAttribute="leading" id="wBB-7o-MJF"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="PHO-rV-C6Y"/>
                     <connections>
+                        <outlet property="collectView" destination="aBJ-W8-ceD" id="4aR-AN-Ksa"/>
                         <outlet property="testLabel" destination="II8-Br-MLb" id="UpT-tk-TpI"/>
                     </connections>
                 </viewController>
@@ -609,7 +631,13 @@
                             </mask>
                         </variation>
                     </view>
-                    <navigationItem key="navigationItem" title="About Me" id="kfe-Ks-qcP"/>
+                    <navigationItem key="navigationItem" title="About Me" id="kfe-Ks-qcP">
+                        <barButtonItem key="rightBarButtonItem" title="Sign Out" id="iDV-Pn-3Um">
+                            <connections>
+                                <action selector="SignOut:" destination="WLa-K0-R5y" id="iVx-bz-Rij"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="camaraButton" destination="yPY-Ts-DgK" id="mAv-0Q-fxt"/>
                         <outlet property="idTextField" destination="y2z-WH-S8Q" id="9ph-U0-m5s"/>
