--- a/WildLifeApp/Base.lproj/Main.storyboard
+++ b/WildLifeApp/Base.lproj/Main.storyboard
@@ -286,37 +286,46 @@
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="II8-Br-MLb">
                                 <rect key="frame" x="20" y="20" width="42" height="21"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="aBJ-W8-ceD">
                                 <rect key="frame" x="0.0" y="49" width="600" height="502"/>
-                                <color key="backgroundColor" red="0.25490196079999999" green="0.36470588240000001" blue="0.68235294120000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <inset key="scrollIndicatorInsets" minX="0.0" minY="20" maxX="0.0" maxY="0.0"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="G2V-ds-17o">
-                                    <size key="itemSize" width="255" height="160"/>
+                                    <size key="itemSize" width="255" height="196"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="15" minY="10" maxX="15" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="myCell" id="EWs-qH-250" customClass="HomeViewCollectionViewCell" customModule="WildLifeApp" customModuleProvider="target">
-                                        <rect key="frame" x="15" y="10" width="255" height="160"/>
+                                        <rect key="frame" x="15" y="10" width="255" height="196"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="255" height="160"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="255" height="196"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8nk-7G-zSX">
-                                                    <rect key="frame" x="0.0" y="0.0" width="255" height="160"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="255" height="156"/>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hht-su-8UM">
+                                                    <rect key="frame" x="106" y="162" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
                                             <constraint firstItem="8nk-7G-zSX" firstAttribute="top" secondItem="EWs-qH-250" secondAttribute="top" id="Lal-uO-CHj"/>
-                                            <constraint firstAttribute="bottom" secondItem="8nk-7G-zSX" secondAttribute="bottom" id="ToG-O0-AU8"/>
+                                            <constraint firstAttribute="bottom" secondItem="8nk-7G-zSX" secondAttribute="bottom" constant="40" id="ToG-O0-AU8"/>
+                                            <constraint firstItem="hht-su-8UM" firstAttribute="top" secondItem="8nk-7G-zSX" secondAttribute="bottom" constant="6" id="v4j-cp-jDd"/>
+                                            <constraint firstItem="hht-su-8UM" firstAttribute="centerX" secondItem="8nk-7G-zSX" secondAttribute="centerX" id="vwO-5F-1wx"/>
                                             <constraint firstAttribute="trailing" secondItem="8nk-7G-zSX" secondAttribute="trailing" id="xDs-9c-hL8"/>
                                             <constraint firstItem="8nk-7G-zSX" firstAttribute="leading" secondItem="EWs-qH-250" secondAttribute="leading" id="xJt-jq-xVu"/>
                                         </constraints>
@@ -331,7 +340,7 @@
                                 </connections>
                             </collectionView>
                         </subviews>
-                        <color key="backgroundColor" red="0.25490196079999999" green="0.36470588240000001" blue="0.68235294120000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.20000000000000001" green="0.59999999999999998" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="TDR-kv-YL4" firstAttribute="top" secondItem="aBJ-W8-ceD" secondAttribute="bottom" id="1iT-nW-Ie1"/>
                             <constraint firstItem="II8-Br-MLb" firstAttribute="top" secondItem="PiY-Db-1WN" secondAttribute="bottom" id="4dZ-z8-8FC"/>
